# mypackage

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: release.yml
docs/: index.md
mypackage/: __init__.py  utils.py
mypackage-empatutorial-javoba/: __init__.py
mypackage_empatutorial_javoba/geometry/: geometry.py
tests/: test_area.py  test_distance.py  test_divide.py
