[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mypackage-empatutorial-javoba"
version = "0.3.0"
license = {file = "LICENSE"}
description = "My first package"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "paramiko",
    "pytest",
    "pytest-cov",
    "mkdocs",
    "bumpver",
]

[tool.bumpver]
current_version = "v0.2.3"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}."
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"mypackage/__init__.py" = [
    '__version__ = "{pep440_version}"',
]
"pyproject.toml" = [
    'version = "{pep440_version}"',
]
